--- a/resources/client/css/stylesheet.css
+++ b/resources/client/css/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-    background-color: limegreen;
+    background-color: dimgrey;
     margin: 0;
     font-family: 'Arial', serif;
 }
@@ -40,7 +40,7 @@ th.last {
 #pageHeader {
     margin-bottom: 20px;
     border-bottom: 3px solid black;
-    background-color: lightblue;
+    background-color: gray;
     padding: 10px;
 }
 
@@ -114,3 +114,26 @@ table {
     border-radius: 8px;
     padding-left: 64px;
 }
+.frontPage {
+    font-size: 20pt;
+    margin-top: auto;
+    margin-left: auto;
+    background-color: aquamarine;
+}
+
+.fpButton {
+    background-color:#384bff;
+    border: thin black solid;
+    color: white;
+    padding: 10px 17px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    display: block;
+}
+.newimg{
+    alignment: right;
+    border: aqua;
+
+}
+
